# test_task_booking

./: .gitignore  README.md  docker-compose.yml
beckend/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml
beckend/alembic/: env.py
beckend/alembic/versions/: b450bd10cc98_add_apartment_photos_table.py  d7674ea716f0_init.py  e2d5e8402730_add_photos_table_with_binary_data.py
beckend/app/: main.py
beckend/app/api/: deps.py
beckend/app/api/v1/: apartments.py  bookings.py  photos.py
beckend/app/core/: config.py  exceptions.py  logging_config.py  validators.py
beckend/app/db/: session.py
beckend/app/middleware/: logging.py
beckend/app/models/: __init__.py  apartment.py  base.py  booking.py  photo.py
beckend/app/schemas/: __init__.py  apartment.py  booking.py
beckend/app/services/: __init__.py  apartment.py  booking.py  file_storage.py
beckend/scripts/: seed.py
beckend/tests/: conftest.py
beckend/tests/api/: test_bookings.py
frontend/: .dockerignore  .env.example  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/components/: ApartmentCard.jsx  BookingModal.jsx  Header.jsx
frontend/components/Toast/: ToastContainer.jsx  ToastItem.jsx
frontend/context/: ToastContext.js  ToastTypes.js
frontend/lib/: api.js
