[tool.poetry]
name = "apartments-api"
version = "0.1.0"
description = "API для посуточной аренды квартир"
authors = ["Artem <your@email.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
sqlalchemy = "^2.0"
alembic = "^1.13"
psycopg2-binary = "^2.9"
pydantic = {extras = ["email"], version = "^2.9"}
pydantic-settings = "^2.6"
python-dateutil = "^2.9"
python-multipart = "^0.0.29"
python-dotenv = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
httpx = "^0.27"
mypy = "^1.13"
black = "^24.10"
ruff = "^0.8"
pre-commit = "^4.0"
faker = "^30.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"